Added schedule tile

--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
 	<div class="container">
 		<div class="tiles">
 			<a href="http://comotionmakerspace.slack.com/" target="_blank" style="background-color: #191D32">
-				<p>Staff Slack</p><i class="material-icons">assignment_ind</i>
+				<p>Staff Slack</p><i class="material-icons">face</i>
 			</a>
-			<a href="https://makerspacementors.slack.com/" target="_blank" style="background-color: #282F44">
+			<a href="schedule.png" target="_blank" style="background-color: #282F44">
+				<p>Schedule</p><i class="material-icons">view_week</i>
+			</a>
+			<!-- <a href="https://makerspacementors.slack.com/" target="_blank" style="background-color: #282F44">
 				<p>Mentor Slack</p><i class="material-icons">face</i>
-			</a>
-			<a href="https://trello.com/b/s93NU9CP/makerspace-staff-tasks" target="_blank" style="background-color: #453A49">
-				<p>Trello</p><i class="material-icons">list</i>
-			</a>
-			<a href="https://uwnetid-my.sharepoint.com/personal/mkspace0_uw_edu/wiki/Shared%20Documents/Forms/AllItems.aspx?FolderCTID=0x0120008F198D87E2371047899E8E377484DCCD&View=%7B0427074E-9DC8-4E82-997A-4B98C20D144A%7D" target="_blank" style="background-color: #6D3B47">
+			</a> -->
+			<a href="https://uwnetid-my.sharepoint.com/personal/mkspace0_uw_edu/wiki/Shared%20Documents/Forms/AllItems.aspx?FolderCTID=0x0120008F198D87E2371047899E8E377484DCCD&View=%7B0427074E-9DC8-4E82-997A-4B98C20D144A%7D" target="_blank" style="background-color: #453A49">
 				<p>Sharepoint</p><i class="material-icons">folder</i>
+			</a>
+			<a href="https://trello.com/b/s93NU9CP/makerspace-staff-tasks" target="_blank" style="background-color: #6D3B47">
+				<p>Trello</p><i class="material-icons">list</i>
 			</a>
 			<a href="https://docs.google.com/a/uw.edu/forms/d/e/1FAIpQLSeDPY66etEh5KVcQR8U0nCSwlfPOZ1KInh3VGmdI2NjiudwDg/viewform?c=0&w=1" target="_blank" style="background-color: #575366">
 				<p>Purchasing</p><i class="material-icons">shopping_cart</i>
