--- a/summit.html
+++ b/summit.html
@@ -1,7 +1,14 @@
 <body>
-	<iframe src="https://www.youtube.com/embed/?listType=playlist&list=PLnlUZ92sXoBg3DK6OzjKaTMFpx7tqDpkW&amp;controls=0" frameborder="0" allowfullscreen></iframe>
-	<iframe src="https://www.youtube.com/embed/?listType=playlist&list=PLnlUZ92sXoBg3DK6OzjKaTMFpx7tqDpkW&amp;controls=0" frameborder="0" allowfullscreen></iframe>
-	<iframe src="https://www.youtube.com/embed/?listType=playlist&list=PLnlUZ92sXoBg3DK6OzjKaTMFpx7tqDpkW&amp;controls=0" frameborder="0" allowfullscreen></iframe>
+	<div id="left">
+		<iframe src="https://www.youtube.com/embed/?listType=playlist&list=PLnlUZ92sXoBg3DK6OzjKaTMFpx7tqDpkW&amp;controls=0" frameborder="0" allowfullscreen></iframe>
+		<iframe src="https://www.youtube.com/embed/?listType=playlist&list=PLnlUZ92sXoBg3DK6OzjKaTMFpx7tqDpkW&amp;controls=0" frameborder="0" allowfullscreen></iframe>
+		<iframe src="https://www.youtube.com/embed/?listType=playlist&list=PLnlUZ92sXoBg3DK6OzjKaTMFpx7tqDpkW&amp;controls=0" frameborder="0" allowfullscreen></iframe>
+	</div>
+	<div id="right">
+		<iframe src="https://www.youtube.com/embed/?listType=playlist&list=PLnlUZ92sXoBg3DK6OzjKaTMFpx7tqDpkW&amp;controls=0" frameborder="0" allowfullscreen></iframe>
+		<iframe src="https://www.youtube.com/embed/?listType=playlist&list=PLnlUZ92sXoBg3DK6OzjKaTMFpx7tqDpkW&amp;controls=0" frameborder="0" allowfullscreen></iframe>
+		<iframe src="https://www.youtube.com/embed/?listType=playlist&list=PLnlUZ92sXoBg3DK6OzjKaTMFpx7tqDpkW&amp;controls=0" frameborder="0" allowfullscreen></iframe>
+	</div>
 </body>
 <style type="text/css">
 	html,
@@ -12,6 +19,11 @@
 	iframe {
 		width: 100%;
 		height: 33.33%;
+	}
+	#left,
+	#right {
+		width: 50%;
+		float: left;
 	}
 </style>
 <!-- https://www.youtube.com/playlist?list=PLnlUZ92sXoBg3DK6OzjKaTMFpx7tqDpkW -->
