Updated index.html with WhenIWork

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 			<a href="http://comotionmakerspace.slack.com/" target="_blank" style="background-color: #191D32">
 				<p>Staff Slack</p><i class="material-icons">face</i>
 			</a>
-			<a href="schedule.png" target="_blank" style="background-color: #282F44">
-				<p>Schedule</p><i class="material-icons">view_week</i>
+			<a href="https://app.wheniwork.com/scheduler/" target="_blank" style="background-color: #282F44">
+				<p>WhenIWork</p><i class="material-icons">view_week</i>
 			</a>
 			<!-- <a href="https://makerspacementors.slack.com/" target="_blank" style="background-color: #282F44">
 				<p>Mentor Slack</p><i class="material-icons">face</i>
