--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-	<title>CoMotion MakerSpace Staff</title>
+	<title>CoMotion MakerSpace - Staff Portal</title>
 	<meta property="og:title" content="CoMotion MakerSpace Staff"/>
 	<meta property="og:type" content="website"/>
 	<!-- <meta property="og:url" content="https://"/> -->
@@ -11,22 +11,25 @@
 <body>
 	<div class="container">
 		<div class="tiles">
-			<a href="http://comotionmakerspace.slack.com/" target="_blank" style="background-color: #191D32">
+			<a href="http://comotionmakerspace.slack.com/" style="background-color: #191D32">
 				<p>Staff Slack</p><i class="material-icons">face</i>
 			</a>
-			<a href="https://app.wheniwork.com/scheduler/" target="_blank" style="background-color: #282F44">
-				<p>WhenIWork</p><i class="material-icons">view_week</i>
-			</a>
-			<!-- <a href="https://makerspacementors.slack.com/" target="_blank" style="background-color: #282F44">
+			<!-- <a href="https://makerspacementors.slack.com/" style="background-color: #282F44">
 				<p>Mentor Slack</p><i class="material-icons">face</i>
 			</a> -->
-			<a href="https://uwnetid-my.sharepoint.com/personal/mkspace0_uw_edu/wiki/Shared%20Documents/Forms/AllItems.aspx?FolderCTID=0x0120008F198D87E2371047899E8E377484DCCD&View=%7B0427074E-9DC8-4E82-997A-4B98C20D144A%7D" target="_blank" style="background-color: #453A49">
+			<a href="https://app.wheniwork.com/scheduler/" style="background-color: #282F44">
+				<p>WhenIWork</p><i class="material-icons">view_week</i>
+			</a>
+			<a href="https://wd5.myworkday.com/uw/d/home.htmld" style="background-color: #455A7A">
+				<p>Workday</p><i class="material-icons">timeline</i>
+			</a>
+			<a href="https://uwnetid-my.sharepoint.com/personal/mkspace0_uw_edu/wiki/Shared%20Documents/Forms/AllItems.aspx?FolderCTID=0x0120008F198D87E2371047899E8E377484DCCD&View=%7B0427074E-9DC8-4E82-997A-4B98C20D144A%7D" style="background-color: #453A49">
 				<p>Sharepoint</p><i class="material-icons">folder</i>
 			</a>
-			<a href="https://trello.com/b/s93NU9CP/makerspace-staff-tasks" target="_blank" style="background-color: #6D3B47">
+			<a href="https://trello.com/b/s93NU9CP/makerspace-staff-tasks" style="background-color: #6D3B47">
 				<p>Trello</p><i class="material-icons">list</i>
 			</a>
-			<a href="https://docs.google.com/a/uw.edu/forms/d/e/1FAIpQLSeDPY66etEh5KVcQR8U0nCSwlfPOZ1KInh3VGmdI2NjiudwDg/viewform?c=0&w=1" target="_blank" style="background-color: #575366">
+			<a href="https://docs.google.com/a/uw.edu/forms/d/e/1FAIpQLSeDPY66etEh5KVcQR8U0nCSwlfPOZ1KInh3VGmdI2NjiudwDg/viewform?c=0&w=1" style="background-color: #575366">
 				<p>Purchasing</p><i class="material-icons">shopping_cart</i>
 			</a>
 		</div>
