--- a/forms.html
+++ b/forms.html
@@ -1,6 +1,6 @@
-<!-- <meta http-equiv="refresh" content="0; url="/> -->
+<meta http-equiv="refresh" content="0; url="https://catalyst.uw.edu/webq/survey/mkspace0/340712/>
 
-<iframe src="https://catalyst.uw.edu/webq/survey/mkspace0/340712"></iframe>
+<!-- <iframe src="https://catalyst.uw.edu/webq/survey/mkspace0/340712"></iframe> -->
 
 <style>
 	html,
