--- a/forms.html
+++ b/forms.html
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content="0; url="https://catalyst.uw.edu/webq/survey/mkspace0/340712/>
+<meta http-equiv="refresh" content="0; url=https://catalyst.uw.edu/webq/survey/mkspace0/340712/">
 
 <!-- <iframe src="https://catalyst.uw.edu/webq/survey/mkspace0/340712"></iframe> -->
 
