Updated form link

--- a/tll.html
+++ b/tll.html
@@ -14,7 +14,7 @@
 			<a href="https://na2.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=e037853e-fb94-429b-aa36-b76166581f77" style="background-color: #13293D">
 				<p>Legal Forms</p><i class="material-icons">account_balance</i>
 			</a>
-			<a href="https://docs.google.com/forms/d/e/1FAIpQLSe3f6DNPzei6i4-JG8iuIM7-lo0CWkBMdaV88LS4KPT-Hd-SA/viewform?usp=sf_link" style="background-color: #006494">
+			<a href="https://slack-redir.net/link?url=https%3A%2F%2Fdocs.google.com%2Fforms%2Fd%2Fe%2F1FAIpQLSdFwc-pAxY1W4_QZzyTM5xiqC49qsurDKzeuHUwDofN3Ath0w%2Fviewform%3Fusp%3Dsf_link" style="background-color: #006494">
 				<p>Checkout Log</p><i class="material-icons">list</i>
 			</a>
 		</div>
