Updated links and cleaned files

--- a/forms.html
+++ b/forms.html
@@ -1,6 +1,6 @@
-<meta http-equiv="refresh" content="0; url=https://catalyst.uw.edu/webq/survey/mkspace0/340712/">
+<meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLSerXzESp8xOSawPmcZ5gyHgGvnfEvM82A0CR40DdgeX4pWFYQ/viewform">
 
-<!-- <iframe src="https://catalyst.uw.edu/webq/survey/mkspace0/340712"></iframe> -->
+<!-- <iframe src=""></iframe> -->
 
 <style>
 	html,
