--- a/forms.html
+++ b/forms.html
@@ -1,4 +1,4 @@
-<meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLSerXzESp8xOSawPmcZ5gyHgGvnfEvM82A0CR40DdgeX4pWFYQ/viewform">
+<meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLSdgtftl7ntjCMzyJDkkJwPjAupr1P8EfLrdps80C0RIfxCKHA/viewform?usp=sf_link">
 
 <!-- <iframe src=""></iframe> -->
 
