fixed the printer form link and status page

--- a/printers.html
+++ b/printers.html
@@ -11,10 +11,10 @@
 <body>
 	<div class="container">
 		<div class="tiles">
-			<a href="https://docs.google.com/forms/d/e/1FAIpQLSfQ9YLydnBf2CWjPyy-oWnMpEu4lLYM7zvYIzIKBTZw0aEKZQ/viewform" style="background-color: #055d6b">
+			<a href="https://docs.google.com/forms/d/e/1FAIpQLSdK9NdS7t1aRvY30YhY6mJUb-GvAxAs6NVUylgzVouR0je1yQ/viewform" style="background-color: #055d6b">
 				<p>Form</p><i class="material-icons">add_to_queue</i>
 			</a>
-			<a href="https://docs.google.com/spreadsheets/d/1kNJX5N4__qV6gJWI5rAMcAX7lG4U_s1AEVQRx1M_JYk/edit#gid=1318675272" style="background-color: #05486b">
+			<a href="http://comotionmaker.space/status" style="background-color: #05486b">
 				<p>Printer Status</p><i class="material-icons">dns</i>
 			</a>
 		</div>
