--- a/status.html
+++ b/status.html
@@ -9,18 +9,5 @@
 	<link rel="stylesheet" type="text/css" href="src/css/main.css">
 </head>
 <body>
-	<div class="container">
-		<div class="tiles">
-			<a href="https://docs.google.com/forms/d/e/1FAIpQLSdK9NdS7t1aRvY30YhY6mJUb-GvAxAs6NVUylgzVouR0je1yQ/viewform" style="background-color: #055d6b">
-				<p>Form</p><i class="material-icons">add_to_queue</i>
-			</a>
-			<a href="/status" style="background-color: #05486b">
-				<p>Printer Status</p><i class="material-icons">dns</i>
-			</a>
-		</div>
-	</div>
+		<iframe style="width:100%;height:100%;border:none" src="https://makerspaceprinterstatus.firebaseapp.com/"></iframe>
 </body>
-<!-- 13293D
-006494
-247BA0
-1B98E0 -->
